feat: 統一 response 格式及方法
