# src/controllers/ads_controller.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"github.com/Madfater/AdDeliveryLink/controllers/data"
 	"github.com/Madfater/AdDeliveryLink/services"
+	"github.com/Madfater/AdDeliveryLink/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
 	"net/http"
@@ -20,46 +21,46 @@ func NewAdsController(service services.AdsService) *AdsController {
 // @Description Creates a new advertisement with the specified title, start and end dates, and conditions.
 // @Param body body data.CreateAdsReq true "Advertisement information"
 // @Tags Advertisement
-// @Success 200
+// @Success 200 {object} data.GenericResponse[entity.Advertisement]
 // @Failure 400
 // @Router /ad [post]
 func (ctrl *AdsController) CreateAdvertisement(c *gin.Context) {
 	var body data.CreateAdsReq
 
 	if err := c.ShouldBindBodyWith(&body, binding.JSON); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request: " + err.Error()})
+		utils.ErrorResponse(c, http.StatusBadRequest, "Invalid request body")
 		return
 	}
 
-	err := ctrl.service.CreateAdvertisement(body)
+	response, err := ctrl.service.CreateAdvertisement(body)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		utils.ErrorResponse(c, http.StatusInternalServerError, "Failed to create advertisement")
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "成功建立"})
+	utils.SuccessResponse(c, response)
 }
 
 // GetAdvertisement @Summary Gets a list of advertisements
 // @Description Gets a list of advertisements that match the specified conditions.
 // @Param query query data.GetAdsReq true "Advertisement query parameters"
 // @Tags Advertisement
-// @Success 200 {object} []data.GetAdsResp
+// @Success 200 {object} data.GenericResponse[data.GetAdsResp]
 // @Failure 400
 // @Router /ad [get]
 func (ctrl *AdsController) GetAdvertisement(c *gin.Context) {
 	var query data.GetAdsReq
 
 	if err := c.ShouldBindQuery(&query); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"message": "Invalid query parameters", "error": err.Error()})
+		utils.ErrorResponse(c, http.StatusBadRequest, "Invalid query parameters")
 		return
 	}
 
-	results, err := ctrl.service.GetAdvertisements(query)
+	result, err := ctrl.service.GetAdvertisements(query)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"message": "Failed to fetch advertisements", "error": err.Error()})
+		utils.ErrorResponse(c, http.StatusInternalServerError, "Failed to fetch advertisements")
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"items": results})
+	utils.SuccessResponse(c, result)
 }
