# src/controllers/data/generic_resp.go
@@ -1,0 +1,7 @@
+package data
+
+type GenericResponse[T any] struct {
+	Status  string `json:"status"`
+	Message string `json:"message"`
+	Result  T      `json:"result"`
+}
