# src/controllers/data/get_ads_resp.go
@@ -1,8 +1,14 @@
 package data
 
-import "time"
+import (
+	"time"
+)
 
 type GetAdsResp struct {
+	Ads []GetAdsRespItem `json:"ads"`
+}
+
+type GetAdsRespItem struct {
 	Title string    `json:"Title"`
 	EndAt time.Time `json:"EndAt"`
 }
